--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
     "db:studio": "prisma studio",
-    "db:generate": "prisma generate"
+    "db:generate": "prisma generate",
+    "netlify": "netlify"
   },
   "dependencies": {
     "@prisma/client": "^5.19.1",
@@ -42,10 +43,10 @@
     "autoprefixer": "^10.4.19",
     "eslint": "^9.0.0",
     "eslint-config-next": "^16.0.0",
+    "netlify-cli": "^23.11.1",
     "postcss": "^8.4.40",
     "prisma": "^5.19.1",
     "tailwindcss": "^3.4.7",
     "typescript": "^5.5.4"
   }
 }
-
